// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.notification.sender;
option go_package = "github.com/bucketeer-io/bucketeer/proto/notification/sender";

import "proto/event/domain/event.proto";
import "proto/feature/feature.proto";
import "proto/experiment/experiment.proto";

message Notification {
  enum Type {
    DomainEvent = 0;
    FeatureStale = 1;
    ExperimentRunning = 2;
    MauCount = 3;
  }
  Type type = 1;
  DomainEventNotification domain_event_notification = 2;
  FeatureStaleNotification feature_stale_notification = 3;
  ExperimentRunningNotification experiment_running_notification = 4;
  MauCountNotification mau_count_notification = 5;
}

message DomainEventNotification {
  reserved 1;  // string environment_namespace = 1
  bucketeer.event.domain.Editor editor = 2;
  bucketeer.event.domain.Event.EntityType entity_type = 3;
  string entity_id = 4;
  bucketeer.event.domain.Event.Type type = 5;
  string environment_id = 6;
}

message FeatureStaleNotification {
  reserved 1;  // string environment_namespace = 1
  repeated bucketeer.feature.Feature features = 2;
  string environment_id = 3;
}

message ExperimentRunningNotification {
  reserved 1;  // string environment_namespace = 1
  string environment_id = 2;
  repeated bucketeer.experiment.Experiment experiments = 3;
}

message MauCountNotification {
  string environment_id = 1;
  int64 event_count = 2;
  int64 user_count = 3;
  int32 month = 4;
}
